@@ -32,17 +32,20 @@ public class KafkaSynthClientTest {
     @Inject
     SynthClientConfig config;
 
+    @Inject
+    ConsumerLifecycle lifecycle;
+
     @Test
     @DisplayName("Broker->Partition mapping is successfully generated")
     public void testPartitionBrokerMappingGenerated() {
-        await().atMost(Duration.ofSeconds(5)).until(() -> partitionRebalancer.getPartitionsByBroker().size() > 0);
+        await().atMost(Duration.ofSeconds(5)).until(() -> !partitionRebalancer.getPartitionsByBroker().isEmpty());
 
         var mapping = partitionRebalancer.getPartitionsByBroker();
 
         // we have only one broker in the test environment, so we expect the topic's one partition to be assigned to broker 0
         assertTrue(mapping.containsKey(0));
         assertEquals(1, mapping.get(0).size());
-        assertEquals(0, mapping.get(0).get(0));
+        assertEquals(0, mapping.get(0).getFirst());
     }
 
     @Test
@@ -54,9 +57,11 @@ public class KafkaSynthClientTest {
 
         var metrics = RestAssured.get("/q/metrics").asString();
 
-        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",partition=\"0\",quantile=\"0.5\"}");
-        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",partition=\"0\",quantile=\"0.5\"}");
-        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",partition=\"0\",quantile=\"0.95\"}");
-        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",partition=\"0\",quantile=\"0.99\"}");
+        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",fromRack=\"dc1\",partition=\"0\",toRack=\"dc1\",quantile=\"0.5\"}");
+        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",fromRack=\"dc1\",partition=\"0\",toRack=\"dc1\",quantile=\"0.9\"}");
+        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",fromRack=\"dc1\",partition=\"0\",toRack=\"dc1\",quantile=\"0.95\"}");
+        assertThat(metrics).contains("synth_client_e2e_latency_ms{broker=\"0\",fromRack=\"dc1\",partition=\"0\",toRack=\"dc1\",quantile=\"0.99\"}");
+
+        lifecycle.shutdown();
     }
 }
